{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 443,
  "lineage": "b8e12c00-a3ce-a01c-3f75-086f20af4466",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494117985516:internet-gateway/igw-0d07d4640d34c81c6",
            "id": "igw-0d07d4640d34c81c6",
            "owner_id": "494117985516",
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "vpc_id": "vpc-0c9def84b7b8772ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-51260",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494117985516:loadbalancer/app/globo-web-alb/addacb4b320da0fc",
            "arn_suffix": "app/globo-web-alb/addacb4b320da0fc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-374520173.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:494117985516:loadbalancer/app/globo-web-alb/addacb4b320da0fc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00933b759e9d2b392"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d7322d9396270c3e"
              },
              {
                "subnet_id": "subnet-0e88186e7439794ae"
              }
            ],
            "subnets": [
              "subnet-0d7322d9396270c3e",
              "subnet-0e88186e7439794ae"
            ],
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "vpc_id": "vpc-0c9def84b7b8772ff",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494117985516:listener/app/globo-web-alb/addacb4b320da0fc/d76da55a609130b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:494117985516:targetgroup/nginx-alb-tgjls/b6145368ead2ebdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494117985516:listener/app/globo-web-alb/addacb4b320da0fc/d76da55a609130b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:494117985516:loadbalancer/app/globo-web-alb/addacb4b320da0fc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:494117985516:targetgroup/nginx-alb-tgjls/b6145368ead2ebdf",
            "arn_suffix": "targetgroup/nginx-alb-tgjls/b6145368ead2ebdf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:494117985516:targetgroup/nginx-alb-tgjls/b6145368ead2ebdf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-alb-tgjls",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c9def84b7b8772ff"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494117985516:route-table/rtb-0cffd6a16ac2d1246",
            "id": "rtb-0cffd6a16ac2d1246",
            "owner_id": "494117985516",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d07d4640d34c81c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9def84b7b8772ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f14e2b97b73efa54",
            "route_table_id": "rtb-0cffd6a16ac2d1246",
            "subnet_id": "subnet-0d7322d9396270c3e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a26e273ce2466b8",
            "route_table_id": "rtb-0cffd6a16ac2d1246",
            "subnet_id": "subnet-0e88186e7439794ae"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494117985516:security-group/sg-00933b759e9d2b392",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00933b759e9d2b392",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "494117985516",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9def84b7b8772ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494117985516:security-group/sg-0aa5d90e1146c81dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa5d90e1146c81dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "494117985516",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9def84b7b8772ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494117985516:subnet/subnet-0d7322d9396270c3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7322d9396270c3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "494117985516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "vpc_id": "vpc-0c9def84b7b8772ff"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494117985516:subnet/subnet-0e88186e7439794ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e88186e7439794ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "494117985516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "vpc_id": "vpc-0c9def84b7b8772ff"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494117985516:vpc/vpc-0c9def84b7b8772ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054564aa54756ad1e",
            "default_route_table_id": "rtb-087d54e66aad400ee",
            "default_security_group_id": "sg-092f60934bd3727e6",
            "dhcp_options_id": "dopt-0d9e7aa7183a25e68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9def84b7b8772ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087d54e66aad400ee",
            "owner_id": "494117985516",
            "tags": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            },
            "tags_all": {
              "billing_code": "G34324234",
              "company": "Globomantics",
              "project": "Globomantics-MIapp"
            }
          }
        }
      ]
    }
  ]
}